Jann 30/objects/CRS_CRS_Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beverage_Product_Name__c</fullName>
        <label>Beverage Product Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Product_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>CRS Product External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KO_Product__c</fullName>
        <label>KO Product</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gvwCRS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To distinguish if this product only shows up in glaceau vitaminwater product list</inlineHelpText>
        <label>gvwCRS</label>
        <type>Checkbox</type>
    </fields>
    <label>CRS Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Beverage_Product_Name__c</columns>
        <columns>KO_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>canada dry</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Beverage Product ID</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE0000000Rxb5MAC_00Nc0000000TuZNEA0</fullName>
        <active>true</active>
        <booleanFilter>((1 AND 2) OR (3 AND 4)) AND 5</booleanFilter>
        <field>CRS__c.CRS_Product_Name__c</field>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>CRS submission</value>
        </filterItems>
        <filterItems>
            <field>CRS_CRS_Product__c.gvwCRS__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>glaceau vitaminwater CRS</value>
        </filterItems>
        <filterItems>
            <field>CRS_CRS_Product__c.gvwCRS__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CRS_CRS_Product__c.Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CRS_Product Name</name>
        <sourceObject>CRS__c</sourceObject>
    </namedFilters>
    <pluralLabel>CRS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>